--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-community/checkbox": "^0.5.16",
     "expo": "^49.0.16",
+    "expo-image": "~1.3.4",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-auth0": "^3.0.2",
-    "react-native-web": "~0.19.6",
-    "expo-image": "~1.3.4"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
